# Wannier2GTO

./: Manifest.toml  Project.toml  README.md
src/: BilayerGraphene.jl  CompressedWannier.jl  GrapheneTB.jl  Wannier2GTO.jl  compression.jl  compute_graphene_wannier.jl  generate_bloch_and_wannier.jl  wannier_preprocessing.jl
src/GaIn/: GaIn.jl
src/GaIn/GaIn-1.0/: AUTHORS  Makefile  Makefile.am  Makefile.in  README  config.status  configure  configure.ac
src/GaIn/GaIn-1.0/autom4te.cache/: output.0  requests  traces.0
src/GaIn/GaIn-1.0/doc/: Doxyfile  script_doxygen
src/GaIn/GaIn-1.0/include/: GaIn.FC.h  GaIn.h
src/GaIn/GaIn-1.0/src/: A_functions.h  CenteredPowerExpansion.f90  Coulomb.f90  CoulombUtil.f90  CoulombUtilExpert.f90  CubicHarmonicProduct.f90  Electrostatics.f90  GaIn.config.h  GaIn.config.h.in  Laplacian.f90  Makefile  Makefile.am  Makefile.in  Overlap.f90  R2Moment.f90  R_1_norm.f90  R_Laplacian.f90  R_from_Y.f90  R_to_D_Conversion.f90  Transform.f90  XYZ_power_to_ir.f90  Y_Value.f90  mod_centeredpowerexpansion.mod  mod_coulombutils.mod  mod_coulombutilsexpert.mod  mod_cubicharmonicsproduct.mod  mod_r_1_norm.mod  mod_r_from_y.mod  mod_r_laplacian.mod  mod_r_to_d_conversion.mod  mod_rlylm_laplacian.mod  mod_transformutils.mod  mod_xzy_power_to_ir.mod  rlYlmLaplacian.f90  stamp-h1
src/GaIn/GaIn-1.0/src/specialized_D_Coulomb_X/: A_functions.f90  Av_functions.h  D_X_R_0.f90  D_X_R_1.f90  D_X_R_2.f90  D_X_R_3.f90  D_X_R_4.f90  D_X_R_shell_0.f90  D_X_R_shell_0_vec1.f90  D_X_R_shell_0_vec4.f90  D_X_R_shell_1.f90  D_X_R_shell_1_vec1.f90  D_X_R_shell_1_vec4.f90  D_X_R_shell_2.f90  D_X_R_shell_2_vec1.f90  D_X_R_shell_2_vec4.f90  D_X_R_shell_3.f90  D_X_R_shell_3_vec1.f90  D_X_R_shell_3_vec4.f90  D_X_R_shell_4.f90  D_X_R_shell_4_vec1.f90  D_X_R_shell_4_vec4.f90  D_X_V_and_E.f90  D_X_V_and_E_vec1.f90  D_X_V_and_E_vec4.f90  D_X_Y_0.f90  D_X_Y_1.f90  D_X_Y_2.f90  D_X_Y_3.f90  D_X_Y_4.f90  D_X_Y_shell_0.f90  D_X_Y_shell_0_vec1.f90  D_X_Y_shell_0_vec4.f90  D_X_Y_shell_1.f90  D_X_Y_shell_1_vec1.f90  D_X_Y_shell_1_vec4.f90  D_X_Y_shell_2.f90  D_X_Y_shell_2_vec1.f90  D_X_Y_shell_2_vec4.f90  D_X_Y_shell_3.f90  (+53 more)
src/GaIn/GaIn-1.0/src/specialized_D_Coulomb_X/.deps/: my_erf.Po
src/GaIn/GaIn-1.0/tests/: Makefile  Makefile.am  Makefile.in  test_Coulomb.f90  test_Electrostatics.f90  test_Laplacian.f90  test_Overlap.f90  test_R2Moment.f90  test_R_1_norm.f90  test_Transform.f90  test_ir_index.f90
src/SAGTOs/: GaussianPolynomials.jl  SAGTOs_basis.jl  symmetry_adapted_polynoms.jl
src/atomic_orbitals/: GaussianPolynomials.jl  SAGTOs_parameters.jl
src/basis_functions/: #GaussianPolynomials.jl#  BasisFunctions.jl  GaussianPolynomials.jl  SAGTO.jl
src/common/: Hs_scalar_prods.jl  callback_info.jl  data_storage.jl  extract_wannier_functions.jl  ifft_supercell.jl  mol_int.jl  read_data.jl  supercell.jl  utils.jl
src/compressed_wannier/: CompressedWannier.jl
src/compression/: compression.jl  wannier_preprocessing.jl
src/compression_routines/: OptimKit_solve.jl  compression.jl  cost_function.jl  inner_optimization.jl
src/integrals/: GaIn.jl  integrals.jl
src/old/: graphene_without_blob.jl
src/tight_binding/: TB_ham.jl  TightBindingHamiltonian.jl  TightBindingModel.jl  apply_hamiltonian.jl  hamiltonian.jl  hamiltonian_scalar_product.jl  tb_system.jl
tests/: #1d_chain.jl#  1d_chain.jl  graphene.jl  launch_compression.jl  produce_graphene_wanniers.jl  test_cases.jl  wannierization.jl
tests/graphene_data/: w1_compressed_3xy_1z_H1.json  w1_compressed_3xy_1z_L2.json  w2_compressed_3xy_1z_H1.json  w2_compressed_3xy_1z_L2.json
tests/graphene_data/compressed_wannier/: compressed_wannier.json  w2_compressed.json
workflow/: compression.jl  monolayer_graphene.jl  tight_binding.jl  wannier_pz_Ecut-15.json
